feat: sdk cdn，不评论问题，双击创建点问题，重新实例化不重新请求问题

--- a/docs/高级/配置.md
+++ b/docs/高级/配置.md
@@ -19,6 +19,18 @@
 
 从 [LeanCloud](https://leancloud.cn/dashboard/applist.html#/apps) 的应用中得到的 `服务器地址`
 
+## path
+
+- 类型：`String`
+- 默认值：`window.location.pathname`
+- 可选值：`window.location.pathname`、`window.location.href`、`自定义`
+
+当前 `网址` 路径，用于区分不同的 `网址`，以保证当前 `网址` 的评论列表正确性
+
+!> 请确保每个 `网址` 路径的唯一性，否则可能会出现不同页面下加载相同评论列表的情况
+
+!> 如果值为 `window.location.href`，可能会出现随便加 `不同参数` 导致判定成不同页面的情况
+
 ## origin
 
 - 类型：`String`
