feat: 支持 gravatar 头像

--- a/docs/高级/配置.md
+++ b/docs/高级/配置.md
@@ -74,3 +74,29 @@ new Comments({
 - 默认值：`0.1`
 
 评论框关闭延迟，单位：秒
+
+## gravatar
+
+- 类型：`Boolean|String`
+- 默认值：`mp`
+- 可选值：`false`,`''`、`mp`、`identicon`、`monsterid`、`wavatar`、`retro`、`robohash`、`blank`
+
+获取不到头像的展现方式，如果传递 `false`，则可以关闭头像
+
+| 参数 | 图片 | 说明 |
+|:---|:---|:---|
+| `''` | ![](../assets/img/none.jpg ':size=22') | Gravatar 标志 |
+| `mp` | ![](../assets/img/mp.png ':size=22') | 神秘人士 |
+| `identicon` | ![](../assets/img/identicon.png ':size=22') | 抽象图形（自动生成） |
+| `monsterid` | ![](../assets/img/monsterid.png ':size=22') | 小怪物（自动生成） |
+| `wavatar` | ![](../assets/img/wavatar.png ':size=22') | Wavatar（自动生成） |
+| `retro` | ![](../assets/img/retro.png ':size=22') | 复古（自动生成） |
+| `robohash` | ![](../assets/img/robohash.png ':size=22') | 机器人（自动生成） |
+| `blank` | ![](../assets/img/blank.png ':size=22') | 空白 |
+
+## gravatarCDN
+
+- 类型：`String`
+- 默认值：`https://www.gravatar.com`
+
+推荐采用国内的 CDN 代理，比如 `https://gravatar.loli.net`
