--- a/docs/高级/配置.md
+++ b/docs/高级/配置.md
@@ -68,6 +68,13 @@ new Comments({
 
 坐标点层级，评论框的层级为坐标点层级 +1
 
+## close
+
+- 类型：`String`
+- 默认值：`delay`
+
+评论框关闭方式，`click` 为点击其他区域关闭，`delay` 为根据延时时间自动关闭
+
 ## delay
 
 - 类型：`Number`
