--- a/docs/基础/更新日志.md
+++ b/docs/基础/更新日志.md
@@ -1,1 +1,24 @@
-## 更新日志
+`Comments` 严格遵循 [Semantic Versioning 2.0.0](http://semver.org/lang/zh-CN/) 语义化版本规范。
+
+## 0.3.0
+`2020-12-21`
+
+- 🔥 重构
+
+## 0.2.1
+`2020-12-08`
+
+- 🐞 修复 zIndex 参数不生效的问题
+
+## 0.2.0
+`2020-12-08`
+
+- 🌟 增加文档
+- 🌟 分离 SDK 加载
+- 🌟 支持 Gravatar 头像
+- 🐞 修复浮点和评论框可双击的问题
+
+## 0.1.1
+`2020-12-04`
+
+- 🌟 基于 Vue 的快速原型实现
