feat: 支持 spa 应用

--- a/docs/基础/更新日志.md
+++ b/docs/基础/更新日志.md
@@ -1,5 +1,15 @@
 `Comments` 严格遵循 [Semantic Versioning 2.0.0](http://semver.org/lang/zh-CN/) 语义化版本规范。
 
+## 0.4.0
+`2021-06-08`
+
+- 🔥 SPA 支持
+
+## 0.3.1
+`2021-03-29`
+
+- 🐞 修复 hexo next 主题下样式的问题
+
 ## 0.3.0
 `2020-12-21`
 
