--- a/docs/高级/配置项.md
+++ b/docs/高级/配置项.md
@@ -19,55 +19,6 @@
 
 从 [LeanCloud](https://leancloud.cn/dashboard/applist.html#/apps) 的应用中得到的 `服务器地址`
 
-## path
-
-- 类型：`String`
-- 默认值：`window.location.pathname`
-- 可选值：`window.location.pathname`、`window.location.href`、`自定义`
-
-当前 `网址` 路径，用于区分不同的 `网址`，以保证当前 `网址` 的评论列表正确性
-
-!> 请确保每个 `网址` 路径的唯一性，否则可能会出现不同页面下加载相同评论列表的情况
-
-!> 如果值为 `window.location.href`，可能会出现随便加 `不同参数` 导致判定成不同页面的情况
-
-## origin
-
-- 类型：`String`
-- 默认值：`center`
-- 可选值：`left`、`center`
-
-坐标点原点，`left` 以屏幕左上角为原点，`center` 以屏幕中心为原点
-
-## pointSize
-
-- 类型：`String`
-- 默认值：`default`
-- 可选值：`large`、`default`、`small`
-
-坐标点尺寸，`large` 为 10x10 像素，`default` 为 8x8 像素，`small` 为 6x6 像素
-
-## pointColor
-
-- 类型：`String|Array`
-- 默认值：`random`
-- 可选值：`random`、`red`、`volcano`、`orange`、`gold`、`yellow`、`lime`、`red`、`green`、`cyan`、`blue`、`geekblue`、`purple`、`magenta`
-
-坐标点颜色，默认支持 12 种配色，可传递颜色数组来自定义配色
-
-```js
-new Comments({
-    pointColor: ['#f00', '#0f0', '#00f', 'rgba(255, 0, 0, 0.5)'],
-});
-```
-
-## zIndex
-
-- 类型：`Number`
-- 默认值：`999`
-
-坐标点层级，评论框的层级为坐标点层级 +1
-
 ## close
 
 - 类型：`String`
@@ -107,3 +58,60 @@ new Comments({
 - 默认值：`https://www.gravatar.com`
 
 推荐采用国内的 CDN 代理，比如 `https://gravatar.loli.net`
+
+## origin
+
+- 类型：`String`
+- 默认值：`center`
+- 可选值：`left`、`center`
+
+浮点原点，`left` 以屏幕左上角为原点，`center` 以屏幕中心为原点
+
+## path
+
+- 类型：`String`
+- 默认值：`window.location.pathname`
+- 可选值：`window.location.pathname`、`window.location.href`、`自定义`
+
+当前 `网址` 路径，用于区分不同的 `网址`，以保证当前 `网址` 的评论列表正确性
+
+!> 请确保每个 `网址` 路径的唯一性，否则可能会出现不同页面下加载相同评论列表的情况
+
+!> 如果值为 `window.location.href`，可能会出现随便加 `不同参数` 导致判定成不同页面的情况
+
+## pointColor
+
+- 类型：`String|Array`
+- 默认值：`random`
+- 可选值：`random`、`red`、`volcano`、`orange`、`gold`、`yellow`、`lime`、`red`、`green`、`cyan`、`blue`、`geekblue`、`purple`、`magenta`
+
+浮点颜色，默认支持 12 种配色，可传递颜色数组来自定义配色
+
+```js
+new Comments({
+    pointColor: ['#f00', '#0f0', '#00f', 'rgba(255, 0, 0, 0.5)'],
+});
+```
+
+## pointRange
+
+- 类型：`String`
+- 默认值：`default`
+- 可选值：`large`、`default`
+
+浮点触发范围，`large` 为鼠标移入光圈则显示评论框，`default` 为鼠标移入浮点则显示评论框
+
+## pointSize
+
+- 类型：`String`
+- 默认值：`default`
+- 可选值：`large`、`default`、`small`
+
+浮点尺寸，`large` 为 10x10 像素，`default` 为 8x8 像素，`small` 为 6x6 像素
+
+## zIndex
+
+- 类型：`Number`
+- 默认值：`999`
+
+浮点层级，评论框的层级为浮点层级 +1
